# romp

./: README.md  env_setup_gpu_rice_custom_dyninst.sh  install.sh
.github/workflows/: ccpp.yml
RompLib/: CMakeLists.txt
RompLib/include/: AccessHistory.h  Core.h  CoreUtil.h  DupMemTable.h  Initialize.h  McsLock.h  PfqRWLock.h  ShadowMemory.h  Stats.h  TaskData.h  ThreadData.h
RompLib/src/: AccessHistory.cpp  Callbacks.cpp  Core.cpp  CoreUtil.cpp  DataSharing.cpp  DupMemTable.cpp  Label.cpp  PfqRWLock.cpp  QueryFuncs.cpp  RompLib.cpp  Stats.cpp  TaskDepGraph.cpp
tests/OmpSCR_v2.0/applications/c_MolecularDynamic/: c_md.c
tests/OmpSCR_v2.0/applications/c_QuickSort/: c_qsort.c
tests/OmpSCR_v2.0/applications/cpp_sortOpenMP/: cpp_qsomp5.cpp
tests/ci/: ci-tests.sh  stats.py  stats.sh
